fix: fixed off-center nav options

--- a/helpdesk_manager/static/styles.css
+++ b/helpdesk_manager/static/styles.css
@@ -166,14 +166,9 @@ nav {
   background: white;
   border-bottom: 1px solid black;
   margin-bottom: 20px;
-}
-
-.navbar-options {
   display: flex;
-  list-style: none;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin: 0;
   padding-block: 15px;
 }
